# atlas_c1

./: .gitignore  .gitmodules
install/: local_setup.sh  setup.sh
install/atlas_api/lib/atlas_api/: atlas_api_node
install/atlas_api/share/atlas_api/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/atlas_app/lib/atlas_app/: atlas_app
install/atlas_app/share/atlas_app/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/atlas_app_robot/lib/atlas_app_robot/: atlas_app_robot
install/atlas_app_robot/share/atlas_app_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/atlas_app_robot/share/atlas_app_robot/launch/: atlas_app_robot.launch.py
install/atlas_slam/lib/atlas_slam/: route_manager.py  route_tool.py
install/atlas_slam/share/atlas_slam/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/atlas_web/lib/atlas_web/: atlas_web_node
install/atlas_web/share/atlas_web/: package.bash  package.dsv  package.ps1  package.sh  package.xml  (+1 more)
log/: latest_build
src/c1_bringup/: CMakeLists.txt  package.xml
src/c1_bringup/config/: devices.yaml  joystick.yaml
src/c1_bringup/launch/: c1_bringup_pc.launch.py  c1_bringup_robot.launch.py  driver.launch.py
src/c1_description/: CMakeLists.txt
src/c1_description/launch/: display.launch.py
src/c1_description/urdf/: c1_robot.urdf
src/c1_driver/: CMakeLists.txt  package.xml
src/c1_driver/scripts/: kinematic.py  ros_serial_bridge.py
src/c1_platform/: CMakeLists.txt
(+103 files in other folders)
