<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>atlas_app_robot</name>
  <version>1.0.0</version>
  <description>Atlas A2 — touchscreen app running on the robot. Shows waypoints, route progress, and confirm button for Type-2 routes.</description>
  <maintainer email="roboticsvn.ai@gmail.com">Robotics VN</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <exec_depend>python3-pyqt5</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
